add read current drives

--- a/Rufus/Rufus/mainwindow.ui
+++ b/Rufus/Rufus/mainwindow.ui
@@ -60,7 +60,7 @@
      <string>Device</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox">
+   <widget class="QComboBox" name="listDrives">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -201,7 +201,7 @@
        <widget class="QCheckBox" name="checkBox_2">
         <property name="maximumSize">
          <size>
-          <width>160</width>
+          <width>120</width>
           <height>16777215</height>
          </size>
         </property>
@@ -211,10 +211,10 @@
        </widget>
       </item>
       <item>
-       <widget class="QComboBox" name="comboBox_5">
+       <widget class="QComboBox" name="bootableSelect">
         <property name="maximumSize">
          <size>
-          <width>70</width>
+          <width>110</width>
           <height>16777215</height>
          </size>
         </property>
