--- a/Rufus/maindialog.ui
+++ b/Rufus/maindialog.ui
@@ -32,7 +32,7 @@
    <bool>true</bool>
   </property>
   <property name="windowTitle">
-   <string notr="true">Rufus | SPERIXLABS</string>
+   <string notr="true">Rufus</string>
   </property>
   <property name="windowIcon">
    <iconset resource="rufusresource.qrc">
@@ -50,25 +50,6 @@
      <property name="sizeConstraint">
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
-     <item>
-      <widget class="QLabel" name="logo">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="pixmap">
-        <pixmap resource="rufusresource.qrc">:/res/src/logo-rufus.png</pixmap>
-       </property>
-       <property name="margin">
-        <number>0</number>
-       </property>
-      </widget>
-     </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
